--- a/lab1-main/src/MakefileTasks
+++ b/lab1-main/src/MakefileTasks
@@ -37,7 +37,7 @@ tasks1:
 
 # task 2
 
-.PHONY: t_mnk mnkkmn_b32 mnk_lu2 knmknm_b32_lu2 grade2 tasks2
+.PHONY: t_mnk mnkkmn_b32 mnk_lu2 knmknm_b64_lu4 grade2 tasks2
 
 t_mnk: $(M)
 	@$(M) $(IN) 11 101 1
@@ -48,13 +48,15 @@ mnkkmn_b32: $(M)
 mnk_lu2: $(M)
 	@$(M) $(IN) 1 121 1
 
-mnkkmn_b16: $(M)
+t_mnk_lu4:$(M)
+	@$(M) $(IN) 11 141 1
+t_mnk_b_64_lu4:$(M)
+	@$(M) $(IN) 11 161 1   
+knmknm_b16_lu2: $(M)
 	@$(M) $(IN) 1 131 1
-mnkkmn_b16: $(M)
-	@$(M) $(IN) 1 141 1
-mnkkmn_b64_lu4: $(M)
+knmknm_b64_lu4: $(M)
 	@$(M) $(IN) 1 151 1
-grade2: t_mnk
+grade2: t_mnk_lu4
 
 tasks2:
 	@echo Task 2
@@ -62,6 +64,7 @@ tasks2:
 	@$(MAKE) t_mnk
 	@$(MAKE) mnkkmn_b32
 	@$(MAKE) mnk_lu2
+	@$(MAKE) grade2
 
 # task 3
 
