--- a/lab1-main/src/MakefileTasks
+++ b/lab1-main/src/MakefileTasks
@@ -64,6 +64,9 @@ tasks2:
 	@$(MAKE) t_mnk
 	@$(MAKE) mnkkmn_b32
 	@$(MAKE) mnk_lu2
+	@$(MAKE) t_mnk_b_64_lu4
+	@$(MAKE) knmknm_b16_lu2
+	@$(MAKE) knmknm_b64_lu4
 	@$(MAKE) grade2
 
 # task 3
@@ -72,7 +75,6 @@ tasks2:
 
 simd: $(MS)
 	@$(MS) $(IN) 13 201 1
-# 这里改成了YP32
 
 o3: $(MO)
 	@$(MO) $(IN) 1 1 1
